--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,28 @@
     }
 }
 
+@keyframes zoom {
+    from {
+        opacity: 0;
+        transform: scale(0.93);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1.0);
+    }
+}
+
+@keyframes translate {
+    from {
+        opacity: 0;
+        transform: translate(0px, -50px);
+    }
+    to {
+        opacity: 1;
+        transform: translate(0px, 0px);
+    }
+}
+
 html {font-family: sans-serif; font-size: 90%; background-color:#fafafa }
 body {margin: 0px;}
 
@@ -26,22 +48,22 @@ select {width: 300px; margin: 1px}
 .username:hover {text-decoration:underline; color:#313da1;}
 .notification {background-color: #397fbf; font-weight: bold; color:#ddd; position: absolute; right: 0; top:0.8em; margin-top: 9px; padding: 4px; display: none}
 
-.carName {color: #444; padding-top: 15px; padding-bottom: 8px; background-image: linear-gradient(to bottom, #eaeaea, #fafafa); border-top: 1px solid #aaa; animation: fadeIn .2s ease-in-out;}
+.carName {color: #444; padding-top: 15px; padding-bottom: 8px; background-image: linear-gradient(to bottom, #eaeaea, #fafafa); border-top: 1px solid #aaa; animation: translate .3s ease-out; }
 .carName:first-child {margin-top: 0px}
 .carName:not(:first-child) {margin-top: 38px;}
 
 .thumbnailContainer {text-align:center; margin: 0 auto; }
 
-.thumbnail {position: relative; display: inline-block; cursor: pointer; background-image: linear-gradient(to top, #fafafa, #cecece 20%, #fafafa 87%); border-bottom: 1px solid transparent; margin-bottom: 10px; transition: border 0.2s ease-out; animation: fadeIn 0.2s ease-in-out;}
+.thumbnail {position: relative; display: inline-block; cursor: pointer; background-image: linear-gradient(to top, #fafafa, #cecece 20%, #fafafa 87%); border-bottom: 1px solid transparent; margin-bottom: 10px; transition: border 0.25s ease-out; animation: fadeIn 0.1s ease-in-out;}
 .thumbnail:hover {background-image: linear-gradient(to top, #e0e0e0, #cdcdcd 20%, #fafafa 87%); border-bottom: 1px #aaa solid;}
 
-.image {z-index:0; opacity: 0}
-.image.loaded { opacity: 1; animation: fadeIn 0.22s ease-in-out;}
+.image {z-index:0; opacity: 0;}
+.image.loaded { opacity: 1; animation: zoom 0.22s ease-in-out;}
 @media screen and (max-width: 460px) {
     .image {max-width: 100%;}
 }
 @media screen and (min-width: 461px) {
-    .image {width: 460px; height: 230px;}
+    .image {width: 460px; height: 230px; margin: 0 10px;}
 }
 
 .thumbnailText {position: absolute; bottom: 8px; left: 0; width: 100%; text-align: center; z-index:1;}
