--- a/styles/style-1.0.1.css
+++ b/styles/style-1.0.1.css
@@ -10,7 +10,7 @@
 @keyframes zoom {
     from {
         opacity: 0;
-        transform: scale(0.93);
+        transform: scale(0.92);
     }
     to {
         opacity: 1;
@@ -54,8 +54,23 @@ select {width: 300px; margin: 1px}
 
 .thumbnailContainer {text-align:center; margin: 0 auto; }
 
-.thumbnail {position: relative; display: inline-block; cursor: pointer; background-image: linear-gradient(to top, #fafafa, #cecece 20%, #fafafa 87%); border-bottom: 1px solid transparent; margin-bottom: 10px; transition: border 0.25s ease-out; animation: fadeIn 0.1s ease-in-out;}
-.thumbnail:hover {background-image: linear-gradient(to top, #e0e0e0, #cdcdcd 20%, #fafafa 87%); border-bottom: 1px #aaa solid;}
+.thumbnail {position: relative; display: inline-block; margin-bottom: 10px; border-bottom: 1px solid transparent/*So all thumbs have same height even if border is not used on .notOwned.*/;}
+.thumbnail.owned {cursor: pointer; background-image: linear-gradient(to top, #fafafa, #cecece 20%, #fafafa 87%); transition: border 0.25s ease-out; animation: fadeIn 0.15s ease-in-out;}
+.thumbnail.notOwned {background-color: #fafafa; opacity: 0.5; transition: opacity 0.3s ease-in-out;}
+
+.thumbnail.owned:hover {background-image: linear-gradient(to top, #e0e0e0, #cdcdcd 20%, #fafafa 87%); border-bottom: 1px #aaa solid;}
+.thumbnail.notOwned:hover {opacity: 1}
+
+.thumbnailText {position: absolute; bottom: 8px; left: 0; width: 100%; text-align: center; z-index:1;}
+@media screen and (max-width: 460px) {
+    .thumbnailText {bottom: 0px; font-size: 80%}
+}
+.thumbnail.notOwned .thumbnailText {animation: fadeIn 0.2s ease-in-out;}
+
+.liveryTitle {font-weight: bold; display: block; margin-bottom: 2px; color: #666; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; transition: color 0.3s ease-in-out;}
+.thumbnail.owned:hover .liveryTitle {color: #444;}
+.liveryDrivers{display: block; font-size: 80%; color: #888; font-style: italic; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; transition: color 0.3s ease-in-out;}
+.thumbnail.owned:hover .liveryDrivers {color: #666;}
 
 .image {z-index:0; opacity: 0;}
 .image.loaded { opacity: 1; animation: zoom 0.22s ease-in-out;}
@@ -66,18 +81,6 @@ select {width: 300px; margin: 1px}
     .image {width: 460px; height: 230px; margin: 0 10px;}
 }
 
-.thumbnailText {position: absolute; bottom: 8px; left: 0; width: 100%; text-align: center; z-index:1;}
-@media screen and (max-width: 460px) {
-    .thumbnailText {bottom: 0px; font-size: 80%}
-}
-.liveryTitle {font-weight: bold; display: block; margin-bottom: 2px; color: #666; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; transition: color 0.3s ease-in-out;}
-.thumbnail:hover .liveryTitle {color: #444;}
-.liveryDrivers{display: block; font-size: 80%; color: #888; font-style: italic; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; transition: color 0.3s ease-in-out;}
-.thumbnail:hover .liveryDrivers {color: #666;}
-
-.thumbnailNotOwned {position: relative; display: inline-block; background-color: #fafafa; opacity: 0.5; border-bottom: 1px solid transparent; margin-bottom: 10px; transition: opacity 0.3s ease-in-out;}
-.thumbnailNotOwned:hover {opacity: 1}
-.thumbnailNotOwned .thumbnailText {color:#777;}
 
 .splash {position: relative; top: 20px; color:#444}
 .title {color:#397fbf; }
