--- a/styles/style-1.0.2.css
+++ b/styles/style-1.0.2.css
@@ -78,7 +78,7 @@ select {width: 300px; margin: 1px}
     .image {max-width: 100%;}
 }
 @media screen and (min-width: 461px) {
-    .image {width: 460px; height: 230px; margin: 0 10px;}
+    .image {width: 460px; height: 230px; margin: 0 7px; /*Max 7px so we display 4 liveries per row for screen 1920px*/}
 }
 
 
