No animation on thumbnail since they don't disapear at page change.

--- a/styles/style-1.0.4.css
+++ b/styles/style-1.0.4.css
@@ -55,7 +55,7 @@ select {width: 300px; margin: 1px}
 .thumbnailContainer {text-align:center; margin: 0 auto; }
 
 .thumbnail {position: relative; display: inline-block; margin-bottom: 10px; border-bottom: 1px solid transparent/*So all thumbs have same height even if border is not used on .notOwned.*/;}
-.thumbnail.owned {cursor: pointer; background-image: linear-gradient(to top, #fafafa, #cecece 20%, #fafafa 87%); transition: border 0.25s ease-out; animation: fadeIn 0.15s ease-in-out;}
+.thumbnail.owned {cursor: pointer; background-image: linear-gradient(to top, #fafafa, #cecece 20%, #fafafa 87%); transition: border 0.25s ease-out;}
 .thumbnail.notOwned {background-color: #fafafa; opacity: 0.5; transition: opacity 0.3s ease-in-out;}
 
 .thumbnail.owned:hover {background-image: linear-gradient(to top, #e0e0e0, #cdcdcd 20%, #fafafa 87%); border-bottom: 1px #aaa solid;}
@@ -65,7 +65,7 @@ select {width: 300px; margin: 1px}
 @media screen and (max-width: 460px) {
     .thumbnailText {bottom: 0px; font-size: 80%}
 }
-.thumbnail.notOwned .thumbnailText {animation: fadeIn 0.2s ease-in-out;}
+.thumbnail.notOwned .thumbnailText {animation: fadeIn 0.22s ease-in-out;}
 
 .liveryTitle {font-weight: bold; display: block; margin-bottom: 2px; color: #666; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; transition: color 0.3s ease-in-out;}
 .thumbnail.owned:hover .liveryTitle {color: #444;}
