--- a/styles/style-1.0.8.css
+++ b/styles/style-1.0.8.css
@@ -87,7 +87,9 @@ option.special {color: #888}
 .carName .special:after,
 .splash .special:after {content:"S"; background-color: #dcdcdc; color: #fafafa; font-weight: bold;
     width: 14px; height: 14px; border-radius: 50%; font-size: 12px; display: inline-block; text-align: center; padding: 2px; 
+    
 }
+.carName .special, .thumbnail.notOwned .special, {cursor: default;}
 
 .thumbnail .special:after {position:absolute; right: 6px; bottom: 4px; z-index:2;}
 .carName .special:after {margin-left: 1em; }
