--- a/styles/style-1.0.8.css
+++ b/styles/style-1.0.8.css
@@ -89,7 +89,7 @@ option.special {color: #888}
     width: 14px; height: 14px; border-radius: 50%; font-size: 12px; display: inline-block; text-align: center; padding: 2px; 
     
 }
-.carName .special, .thumbnail.notOwned .special, {cursor: default;}
+.carName .special, .thumbnail.notOwned .special, .splash .special {cursor: default;}
 
 .thumbnail .special:after {position:absolute; right: 6px; bottom: 4px; z-index:2;}
 .carName .special:after {margin-left: 1em; }
